@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
 
@@ -27,24 +27,33 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
 	implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.5'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+	implementation 'org.mapstruct:mapstruct-processor:1.6.0.Beta1'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	implementation 'com.h2database:h2'
+	compileOnly 'org.projectlombok:lombok:1.18.32'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+	annotationProcessor 'org.projectlombok:lombok:1.18.32'
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-
 	compileOnly 'org.projectlombok:lombok:1.18.38'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	annotationProcessor 'org.projectlombok:lombok:1.18.38'
-
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 	implementation 'org.postgresql:postgresql:42.7.3'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += [
+			'--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+			'--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
+	]
 }
